objects/Favourite__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Favourites</relationshipLabel>
        <relationshipName>Favourites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <displayFormat>F-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Favourites</relationshipLabel>
        <relationshipName>Favourites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Favourite</label>
    <nameField>
        <label>Favourite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favourites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>